--- a/Code modifie/index.html
+++ b/Code modifie/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Nina Carducci, photographe. Figer le bonheur au travers de la photographie" />
     <title>Nina Carducci - Photographe</title>
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
     <link rel="stylesheet" href="./assets/style.css" />
