--- a/Code modifie/index.html
+++ b/Code modifie/index.html
@@ -25,7 +25,7 @@
   <body>
     <header>
       <div class="top-header">
-        <p class="name">Nina Carducci</p>
+        <h1 class="name">Nina Carducci</h1>
         <nav class="nav">
           <ul>
             <li><a href="#about">À propos</a></li>
