--- a/index.html
+++ b/index.html
@@ -21,11 +21,35 @@
     ></script>
     <script src="./assets/maugallery.js"></script>
     <script src="./assets/scripts.js"></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Photographe",
+        "name": "Nina Carducci",
+        "image": "https://melanie2708.github.io/Nina-Carducci---Photographe/#about",
+        "url": "https://melanie2708.github.io/Nina-Carducci---Photographe/",
+        "telephone": "+33 5 56 67 78 89",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "68 avenue Alsace-Lorraine",
+          "addressLocality": "BORDEAUX",
+          "addressRegion": "Nouvelle-Aquitaine",
+          "postalCode": "33200",
+          "addressCountry": "FR"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 44.84695,
+          "longitude": -0.60658
+        },
+        "openingHours": "Mo-Fr 10:00-19:00"
+      }
+    </script>
   </head>
   <body>
     <header>
       <div class="top-header">
-        <p class="name">Nina Carducci</p>
+        <h1 class="name">Nina Carducci</h1>
         <nav class="nav">
           <ul>
             <li><a href="#about">À propos</a></li>
@@ -280,6 +304,11 @@
         </article>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <p>© 2025 Nina-Carducci - Photographe</p>
+      <p>68 avenue Alsace-Lorraine - 33200 BORDEAUX</p>
+      <p>Contactez-nous : +33 5 56 67 78 89</p>
+      <p>Du lundi au vendredi de 10 h à 19 h</p>
+    </footer>
   </body>
 </html>
