Suppression des espaces CSS et rajout des microdonnées

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
     <script src="./assets/scripts.js"></script>
     <script type="application/ld+json">
       {
-        "@context": "https://schema.org",
-        "@type": "Photographe",
+        "@context": "https://schema.org/Person",
+        "@type": "Person",
         "name": "Nina Carducci",
-        "image": "https://melanie2708.github.io/Nina-Carducci---Photographe/#about",
+        "jobTitle": "Photographe"
+        "description": "Spécialisé dans la photographie de portrait et d'événements.",
         "url": "https://melanie2708.github.io/Nina-Carducci---Photographe/",
         "telephone": "+33 5 56 67 78 89",
         "address": {
@@ -304,11 +305,15 @@
         </article>
       </section>
     </main>
-    <footer>
-      <p>© 2025 Nina-Carducci - Photographe</p>
-      <p>68 avenue Alsace-Lorraine - 33200 BORDEAUX</p>
-      <p>Contactez-nous : +33 5 56 67 78 89</p>
-      <p>Du lundi au vendredi de 10 h à 19 h</p>
+    <footer class="footer">
+      <ul>
+        <li>Nina-Carducci - Photographe</li>
+        <li>68 avenue Alsace-Lorraine - 33200 BORDEAUX</li>
+      </ul>
+      <ul>
+        <li>Contactez-nous : +33 5 56 67 78 89</li>
+        <li>Du lundi au vendredi de 10 h à 19 h</li>
+      </ul>
     </footer>
   </body>
 </html>
