--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="fr">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Nina Carducci, photographe. Figer le bonheur au travers de la photographie" />
+    <meta name="robots" content="index, follow" />
+    <meta
+      name="description"
+      content="Nina Carducci, photographe à Bordeaux. Figer le bonheur au travers de la photographie"
+    />
     <title>Nina Carducci - Photographe</title>
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
     <link rel="stylesheet" href="./assets/style.css" />
@@ -26,7 +30,7 @@
         "@context": "https://schema.org/Person",
         "@type": "Person",
         "name": "Nina Carducci",
-        "jobTitle": "Photographe"
+        "jobTitle": "Photographe",
         "description": "Spécialisé dans la photographie de portrait et d'événements.",
         "url": "https://melanie2708.github.io/Nina-Carducci---Photographe/",
         "telephone": "+33 5 56 67 78 89",
@@ -43,7 +47,7 @@
           "latitude": 44.84695,
           "longitude": -0.60658
         },
-        "openingHours": "Mo-Fr 10:00-19:00"
+        "openingHours": "Lundi-Vendredi 10:00-19:00"
       }
     </script>
   </head>
@@ -140,7 +144,7 @@
             <img src="./assets/images/nina.webp" alt="Nina Carducci" />
           </div>
           <div id="about-me">
-            <h3 class="about-me__title">A propos de moi</h3>
+            <h2 class="about-me__title">A propos de moi</h2>
             <p class="about-me__introduction">
               Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une
               émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.
@@ -156,7 +160,7 @@
           </div>
         </article>
         <article id="gallery">
-          <h3 class="title">Portfolio</h3>
+          <h2 class="title">Portfolio</h2>
           <div class="container py-3">
             <div class="gallery" style="display: none">
               <img
@@ -229,7 +233,7 @@
           </div>
         </article>
         <article id="services">
-          <h3 class="title">Mes services</h3>
+          <h2 class="title">Mes services</h2>
           <div class="container">
             <div class="service">
               <div class="service__description">
@@ -286,7 +290,7 @@
         <article id="contact">
           <div class="container">
             <div class="form-container">
-              <h3>Une question ? Une demande de devis ?</h3>
+              <h2>Une question ? Une demande de devis ?</h2>
               <p>N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
               <form action="" method="post">
                 <label for="nom">Nom</label>
