--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="robots" content="index, follow" />
     <meta
       name="description"
-      content="Nina Carducci, photographe à Bordeaux. Figer le bonheur au travers de la photographie"
+      content="Découvrez les services de Nina Carducci, photographe professionnelle spécialisée dans les portraits, mariages, concerts, et photographies d'entreprises"
     />
     <title>Nina Carducci - Photographe</title>
-    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="./assets/style.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,18 +17,18 @@
       rel="stylesheet"
     />
     <meta charset="UTF-8" />
-    <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
+    <script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
-    <script src="./assets/maugallery.js"></script>
-    <script src="./assets/scripts.js"></script>
+    <script src="./assets/maugallery.min.js"></script>
+    <script src="./assets/scripts.min.js"></script>
     <script type="application/ld+json">
       {
-        "@context": "https://schema.org/Person",
-        "@type": "Person",
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
         "name": "Nina Carducci",
         "jobTitle": "Photographe",
         "description": "Spécialisé dans la photographie de portrait et d'événements.",
@@ -42,12 +42,7 @@
           "postalCode": "33200",
           "addressCountry": "FR"
         },
-        "geo": {
-          "@type": "GeoCoordinates",
-          "latitude": 44.84695,
-          "longitude": -0.60658
-        },
-        "openingHours": "Lundi-Vendredi 10:00-19:00"
+        "openingHours": "Mo,Tu,We,Th,Fr 10:00-19:00"
       }
     </script>
   </head>
