--- a/index.html
+++ b/index.html
@@ -25,6 +25,24 @@
     ></script>
     <script src="./assets/maugallery.min.js"></script>
     <script src="./assets/scripts.min.js"></script>
+    <meta property="og:site_name" content="Nina Carducci-Photographe" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://melanie2708.github.io/Nina-Carducci---Photographe/" />
+    <meta property="og:title" content="Nina Carducci-Photographe" />
+    <meta
+      property="og:description"
+      content="Découvrez les services de Nina Carducci, photographe professionnelle spécialisée dans les portraits, mariages, concerts, et photographies d'entreprises"
+    />
+    <meta property="og:image" content="" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@monCompteTwitter" />
+    <meta name="twitter:title" content="Nina Carducci-Photographe" />
+    <meta
+      name="twitter:description"
+      content="Découvrez les services de Nina Carducci, photographe professionnelle spécialisée dans les portraits, mariages, concerts, et photographies d'entreprises"
+    />
+    <meta name="twitter:image" content="" />
+    <meta name="twitter:url" content="https://melanie2708.github.io/Nina-Carducci---Photographe/" />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
